--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -6,63 +6,31 @@
             "packagist": false
         },
         {
-            "url": "http://devrepo.shd.ci.nonprod.dvsa.aws",
+            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
         },
         {
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-logging.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-common.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-transfer.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-utils.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git",
-            "type": "vcs"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-autoload.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-testhelpers.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-devtools.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-coding-standards.git"
-
+            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
+            "type": "composer"
         }
     ],
     "require": {
         "php": ">=7.1",
         "zendframework/zendframework": "~2.4.0",
         "doctrine/annotations": "^1.2.3",
-        "symfony/Filesystem": "~2.6.0",
+        "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/OlcsCommon": "dev-release/4.203.1",
-        "olcs/olcs-transfer": "dev-release/4.203.1",
-        "olcs/olcs-utils": "dev-release/4.203.1",
-        "olcs/olcs-auth": "dev-release/4.203.1",
-        "olcs/olcs-logging": "dev-release/4.203.1"
+        "olcs/olcscommon": "^4.203",
+        "olcs/olcs-transfer": "^4.203",
+        "olcs/olcs-utils": "^4.203",
+        "olcs/olcs-auth": "^4.203",
+        "olcs/olcs-logging": "^4.203",
+        "elendev/nexus-composer-push": "^0.0.4"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "dev-master",
+        "olcs/olcs-devtools": "^4.203",
         "mikey179/vfsstream": "^1.4.0",
-        "olcs/olcs-testhelpers": "dev-develop",
+        "olcs/olcs-testhelpers": "^4.203",
         "phpstan/phpstan-shim": "^0.10.5",
         "phpstan/phpstan-mockery": "^0.10.2",
         "mockery/mockery": "^1.2.0",
@@ -71,7 +39,7 @@
     "autoload": {
         "classmap": [
             "module/Olcs/src",
-            "vendor/olcs/OlcsCommon/Common/src/Common"
+            "vendor/olcs/olcscommon/Common/src/Common"
         ],
         "psr-4": {
             "Common\\": "vendor/olcs/OlcsCommon/Common/src/Common"
@@ -79,7 +47,7 @@
     },
     "config": {
         "preferred-install": "dist",
-        "secure-http" : false,
+        "secure-http": false,
         "platform": {
             "php": "7.1.16"
         }
@@ -91,5 +59,15 @@
         "coverage": "vendor/bin/phpunit -c test/phpunit.xml --coverage-html ./test/coverage/html",
         "sonar": "vendor/bin/phpunit -c test/phpunit.xml --coverage-clover ./test/coverage/coverage-report.clover --log-junit ./test/coverage/log.junit",
         "update-syms": "vendor/bin/composer-update-syms"
+    },
+    "extra": {
+        "nexus-push": {
+            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/olcs-selfserve",
+            "ignore-dirs": [
+                "test",
+                "config/autoload/local.php",
+                "node_modules"
+            ]
+        }
     }
 }
