--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -20,17 +20,17 @@
         "doctrine/annotations": "^1.2.3",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "^4.203",
-        "olcs/olcs-utils": "^4.203",
-        "olcs/olcs-auth": "^4.204",
-        "olcs/olcs-logging": "^4.203",
-        "elendev/nexus-composer-push": "^0.0.4",
-        "olcs/olcs-common": "^4.204"
+        "olcs/olcs-transfer": "^4.205",
+        "olcs/olcs-utils": "^4.205",
+        "olcs/olcs-auth": "^4.205",
+        "olcs/olcs-logging": "^4.205",
+        "elendev/nexus-composer-push": "^0.1",
+        "olcs/olcs-common": "^4.205"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "^4.203",
+        "olcs/olcs-devtools": "^4.205",
         "mikey179/vfsstream": "^1.4.0",
-        "olcs/olcs-testhelpers": "^4.203",
+        "olcs/olcs-testhelpers": "^4.205",
         "phpstan/phpstan-shim": "^0.10.5",
         "phpstan/phpstan-mockery": "^0.10.2",
         "mockery/mockery": "^1.2.0",
@@ -63,10 +63,10 @@
     "extra": {
         "nexus-push": {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/olcs-selfserve",
-            "ignore-dirs": [
-                "test",
+            "ignore": [
+                "test/",
                 "config/autoload/local.php",
-                "node_modules"
+                "node_modules/"
             ]
         }
     }
