--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -6,6 +6,26 @@
             "packagist": false
         },
         {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-transfer.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-common.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-utils.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-logging.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git"
+        },
+        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
         },
@@ -16,17 +36,65 @@
     ],
     "require": {
         "php": ">=7.0",
-        "zendframework/zendframework": "~2.4.0",
+        "zendframework/zend-authentication": "^2.5",
+        "zendframework/zend-barcode": "^2.5",
+        "zendframework/zend-cache": "^2.5",
+        "zendframework/zend-captcha": "^2.5",
+        "zendframework/zend-code": "^2.5",
+        "zendframework/zend-config": "^2.5",
+        "zendframework/zend-console": "^2.5",
+        "zendframework/zend-crypt": "^2.5",
+        "zendframework/zend-db": "^2.5",
+        "zendframework/zend-debug": "^2.5",
+        "zendframework/zend-di": "^2.5",
+        "zendframework/zend-dom": "^2.5",
+        "zendframework/zend-escaper": "^2.5",
+        "zendframework/zend-eventmanager": "^2.5",
+        "zendframework/zend-feed": "^2.5",
+        "zendframework/zend-file": "^2.5",
+        "zendframework/zend-filter": "^2.5",
+        "zendframework/zend-form": "^2.5",
+        "zendframework/zend-http": "^2.5",
+        "zendframework/zend-i18n": "^2.5",
+        "zendframework/zend-i18n-resources": "^2.5",
+        "zendframework/zend-inputfilter": "^2.5",
+        "zendframework/zend-json": "^2.5",
+        "zendframework/zend-loader": "^2.5",
+        "zendframework/zend-log": "^2.5",
+        "zendframework/zend-mail": "^2.5",
+        "zendframework/zend-math": "^2.5",
+        "zendframework/zend-memory": "^2.5",
+        "zendframework/zend-mime": "^2.5",
+        "zendframework/zend-modulemanager": "^2.5",
+        "zendframework/zend-mvc": "^2.5",
+        "zendframework/zend-navigation": "^2.5",
+        "zendframework/zend-paginator": "^2.5",
+        "zendframework/zend-permissions-acl": "^2.5",
+        "zendframework/zend-permissions-rbac": "^2.5",
+        "zendframework/zend-progressbar": "^2.5",
+        "zendframework/zend-serializer": "^2.5",
+        "zendframework/zend-server": "^2.5",
+        "zendframework/zend-servicemanager": "^2.5",
+        "zendframework/zend-session": "^2.5",
+        "zendframework/zend-soap": "^2.5",
+        "zendframework/zend-stdlib": "^2.5",
+        "zendframework/zend-tag": "^2.5",
+        "zendframework/zend-text": "^2.5",
+        "zendframework/zend-uri": "^2.5",
+        "zendframework/zend-validator": "^2.5",
+        "zendframework/zend-view": "^2.5",
+        "zendframework/zend-xmlrpc": "^2.5",
+        "zendframework/zendxml": "^1.0.1",
         "doctrine/annotations": "^1.2.3",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "~4.206.0",
-        "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "~4.206.0",
-        "soflomo/purifier": "~0.1.0",
-        "olcs/olcs-logging": "~4.206.0",
+        "olcs/olcs-transfer": "dev-project/zf2.5",
+        "olcs/olcs-utils": "dev-project/zf2.5",
+        "olcs/olcs-auth": "dev-project/zf2.5",
+        "soflomo/purifier": "^1.0",
+        "olcs/olcs-logging": "dev-project/zf2.5",
         "elendev/nexus-composer-push": "^0.1",
-        "olcs/olcs-common": "~4.206.0"
+        "olcs/OlcsCommon": "dev-project/zf2.5"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
