--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -26,6 +26,10 @@
             "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git"
         },
         {
+            "type": "vcs",
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-testhelpers.git"
+        },
+        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
         },
@@ -36,55 +40,23 @@
     ],
     "require": {
         "php": ">=7.1",
-        "zendframework/zend-authentication": "^2.5",
-        "zendframework/zend-barcode": "^2.5",
-        "zendframework/zend-cache": "^2.5",
-        "zendframework/zend-captcha": "^2.5",
-        "zendframework/zend-code": "^2.5",
-        "zendframework/zend-config": "^2.5",
-        "zendframework/zend-console": "^2.5",
-        "zendframework/zend-crypt": "^2.5",
         "zendframework/zend-db": "^2.5",
-        "zendframework/zend-debug": "^2.5",
         "zendframework/zend-di": "^2.5",
-        "zendframework/zend-dom": "^2.5",
-        "zendframework/zend-escaper": "^2.5",
         "zendframework/zend-eventmanager": "^2.5",
-        "zendframework/zend-feed": "^2.5",
-        "zendframework/zend-file": "^2.5",
         "zendframework/zend-filter": "^2.5",
         "zendframework/zend-form": "^2.5",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-i18n": "^2.5",
-        "zendframework/zend-i18n-resources": "^2.5",
         "zendframework/zend-inputfilter": "^2.5",
-        "zendframework/zend-json": "^2.5",
         "zendframework/zend-loader": "^2.5",
         "zendframework/zend-log": "^2.5",
-        "zendframework/zend-mail": "^2.5",
-        "zendframework/zend-math": "^2.5",
-        "zendframework/zend-memory": "^2.5",
-        "zendframework/zend-mime": "^2.5",
-        "zendframework/zend-modulemanager": "^2.5",
         "zendframework/zend-mvc": "^2.5",
         "zendframework/zend-navigation": "^2.5",
-        "zendframework/zend-paginator": "^2.5",
-        "zendframework/zend-permissions-acl": "^2.5",
-        "zendframework/zend-permissions-rbac": "^2.5",
-        "zendframework/zend-progressbar": "^2.5",
-        "zendframework/zend-serializer": "^2.5",
-        "zendframework/zend-server": "^2.5",
         "zendframework/zend-servicemanager": "^2.5",
         "zendframework/zend-session": "^2.5",
-        "zendframework/zend-soap": "^2.5",
         "zendframework/zend-stdlib": "^2.5",
-        "zendframework/zend-tag": "^2.5",
-        "zendframework/zend-text": "^2.5",
-        "zendframework/zend-uri": "^2.5",
         "zendframework/zend-validator": "^2.5",
         "zendframework/zend-view": "^2.5",
-        "zendframework/zend-xmlrpc": "^2.5",
-        "zendframework/zendxml": "^1.0.1",
         "doctrine/annotations": "^1.2.3",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
@@ -98,7 +70,7 @@
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
         "mikey179/vfsstream": "^1.4.0",
-        "olcs/olcs-testhelpers": "~4.206.0",
+        "olcs/olcs-testhelpers": "dev-project/zf2.5",
         "phpstan/phpstan-shim": "^0.10.5",
         "phpstan/phpstan-mockery": "^0.10.2",
         "mockery/mockery": "1.2.4",
