--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -6,18 +6,6 @@
             "packagist": false
         },
         {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-transfer.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-common.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git"
-        },
-        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
         },
@@ -32,13 +20,13 @@
         "doctrine/annotations": "^1.2.3",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "dev-project/ecmt-migration",
+        "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "dev-project/ecmt-migration",
+        "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "~0.1.0",
         "olcs/olcs-logging": "~4.206.0",
         "elendev/nexus-composer-push": "^0.1",
-        "olcs/olcs-common": "dev-project/ecmt-migration"
+        "olcs/olcs-common": "~4.206.0"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
