--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -6,30 +6,6 @@
             "packagist": false
         },
         {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-transfer.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-common.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-utils.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-logging.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-testhelpers.git"
-        },
-        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
         },
@@ -60,17 +36,17 @@
         "doctrine/annotations": "^1.2.3",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "dev-project/zf2.5",
-        "olcs/olcs-utils": "dev-project/zf2.5",
-        "olcs/olcs-auth": "dev-project/zf2.5",
-        "olcs/olcs-logging": "dev-project/zf2.5",
+        "olcs/olcs-transfer": "~4.206.0",
+        "olcs/olcs-utils": "~4.206.0",
+        "olcs/olcs-auth": "~4.206.0",
+        "olcs/olcs-logging": "~4.206.0",
         "elendev/nexus-composer-push": "^0.1",
-        "olcs/olcs-common": "dev-project/zf2.5"
+        "olcs/olcs-common": "~4.206.0"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
         "mikey179/vfsstream": "^1.4.0",
-        "olcs/olcs-testhelpers": "dev-project/zf2.5",
+        "olcs/olcs-testhelpers": "~4.206.0",
         "phpstan/phpstan-shim": "^0.10.5",
         "phpstan/phpstan-mockery": "^0.10.2",
         "mockery/mockery": "1.2.4",
