cookie fetch domain from config

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -93,6 +93,9 @@ return [
     // Google Tag Manager id. If empty or not exists (commented out), then no Google Tag Manager code will be rendered
     'google-tag' => '',
 
+    // The domain value needed to delete GA cookies
+    'google-ga-domain' => '.olcs-selfserve.olcs.gov.uk',
+
     'caches' => [
         \Zend\Cache\Storage\Adapter\Redis::class => [
             'adapter' => [
