--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -18,6 +18,10 @@
             "type": "vcs"
         },
         {
+            "url": "git@repo.shd.ci.nonprod.dvsa.aws:olcs/olcs-auth.git",
+            "type": "vcs"
+        },
+        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
             "type": "composer"
         }
@@ -47,7 +51,7 @@
         "zf-commons/zfc-rbac": "~2.5.0",
         "olcs/olcs-transfer": "dev-project/bilaterals",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "~4.206.0",
+        "olcs/olcs-auth": "dev-project/bilaterals",
         "olcs/olcs-logging": "~4.206.0",
         "elendev/nexus-composer-push": "^0.1",
         "olcs/olcs-common": "dev-project/bilaterals"
