return composer files to normal ready for merge of bilaterals

--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -10,18 +10,6 @@
             "type": "composer"
         },
         {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-common.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-auth.git",
-            "type": "vcs"
-        },
-        {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
             "type": "composer"
         }
@@ -50,13 +38,13 @@
         "doctrine/annotations": "^1.8",
         "symfony/filesystem": "~3.0.0",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "dev-project/bilaterals",
+        "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "dev-project/bilaterals",
+        "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
         "elendev/nexus-composer-push": "^0.1",
-        "olcs/olcs-common": "dev-project/bilaterals"
+        "olcs/olcs-common": "~4.206.0"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
