olcs-24103 reinstate packagist proxy removed in error

--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -8,6 +8,10 @@
         {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
             "type": "composer"
+        },
+        {
+            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
+            "type": "composer"
         }
     ],
     "require": {
