--- a/app/internal/config/autoload/local.php.dist
+++ b/app/internal/config/autoload/local.php.dist
@@ -110,6 +110,13 @@ return array(
             'shared' => 'nonprod/redis-shared',
         ],
     ],
+    'query_cache' => [
+        //sets the ttl for cqrs cache - note that these caches are also used by selfserve
+        'ttl' => [
+            \Dvsa\Olcs\Transfer\Query\CacheableMediumTermQueryInterface::class => 600, //10 minutes
+            \Dvsa\Olcs\Transfer\Query\CacheableLongTermQueryInterface::class => 43200, //12 hours
+        ],
+    ],
     'caches' => [
         \Zend\Cache\Storage\Adapter\Redis::class => [
             'adapter' => [
