--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -12,6 +12,14 @@
         {
             "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
             "type": "composer"
+        },
+        {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
+            "type": "vcs"
+        },
+        {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-auth.git",
+            "type": "vcs"
         }
     ],
     "require": {
@@ -37,9 +45,9 @@
         "zendframework/zend-view": "^2.5",
         "doctrine/annotations": "^1.8",
         "zf-commons/zfc-rbac": "~2.5.0",
-        "olcs/olcs-transfer": "~4.206.0",
+        "olcs/olcs-transfer": "dev-feature/OLCS-27754-citrix-exit",
         "olcs/olcs-utils": "~4.206.0",
-        "olcs/olcs-auth": "~4.206.0",
+        "olcs/olcs-auth": "dev-feature/OLCS-27754-citrix-exit",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
         "elendev/nexus-composer-push": "^0.1",
