Updated Nexus repository URL

--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -6,11 +6,11 @@
             "packagist": false
         },
         {
-            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/OLCS",
+            "url": "http://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
         {
-            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/Packagist-Proxy",
+            "url": "http://nexus.olcs.dev-dvsacloud.uk/repository/Packagist-Proxy",
             "type": "composer"
         }
     ],
@@ -73,7 +73,7 @@
     },
     "extra": {
         "nexus-push": {
-            "url": "http://nexus.shd.ci.nonprod.dvsa.aws/repository/olcs-selfserve",
+            "url": "http://nexus.olcs.dev-dvsacloud.uk/repository/olcs-selfserve",
             "ignore": [
                 "test/",
                 "config/autoload/local.php",
