--- a/app/internal/config/autoload/local.php.dist
+++ b/app/internal/config/autoload/local.php.dist
@@ -114,7 +114,9 @@ return array(
         ],
     ],
     'query_cache' => [
-        //sets the ttl for cqrs cache - note that these caches are also used by selfserve
+        // whether the cqrs cache is enabled
+        'enabled' => true,
+        // sets the ttl for cqrs cache - note that these caches are also used by selfserve
         'ttl' => [
             \Dvsa\Olcs\Transfer\Query\CacheableMediumTermQueryInterface::class => 600, //10 minutes
             \Dvsa\Olcs\Transfer\Query\CacheableLongTermQueryInterface::class => 43200, //12 hours
