feature/OLCS-27862-allowed-tags-in-trans-keys

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -190,4 +190,5 @@ return [
                     ],
                 ],
         ],
+    'html-purifier-cache-dir' => '/var/tmp/htmlPurifierCache',
 ];
