--- a/app/internal/config/autoload/laminas-developer-tools.local.php.dist
+++ b/app/internal/config/autoload/laminas-developer-tools.local.php.dist
@@ -54,7 +54,7 @@ return array(
             'matcher' => array(),
 
             /**
-             * Contains a list with all collector the profiler should run. Zend Developer Tools ships with
+             * Contains a list with all collector the profiler should run. Laminas Developer Tools ships with
              * 'db' (Laminas\Db), 'time', 'event', 'memory', 'exception', 'request' and 'mail' (Laminas\Mail). If you wish to
              * disable a default collector, simply set the value to null or false.
              *
@@ -75,7 +75,7 @@ return array(
             'enabled' => true,
 
             /**
-             * Contains a list with all event-level collectors that should run. Zend Developer Tools ships with 'time'
+             * Contains a list with all event-level collectors that should run. Laminas Developer Tools ships with 'time'
              * and 'memory'. If you wish to disable a default collector, simply set the value to null or false.
              *
              * Example: 'collectors' => array('memory' => null)
@@ -84,7 +84,7 @@ return array(
             'collectors' => array(),
 
             /**
-             * Contains event identifiers used with the event listener. Zend Developer Tools defaults to listen to all
+             * Contains event identifiers used with the event listener. Laminas Developer Tools defaults to listen to all
              * events. If you wish to disable the default all-inclusive identifier, simply set the value to null or
              * false.
              *
@@ -122,7 +122,7 @@ return array(
             'position' => 'bottom',
 
             /**
-             * If enabled, the Toolbar will check if your current Zend Framework version is up-to-date.
+             * If enabled, the Toolbar will check if your current Laminas Framework version is up-to-date.
              * Note: The check will only occur once every hour.
              *
              * Expects: bool
