VOL-1027: Added forwarder for verify to fox samesite cookie

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -191,4 +191,9 @@ return [
                 ],
         ],
     'html-purifier-cache-dir' => '/var/tmp/htmlPurifierCache',
+    'verify' => [
+        'forwarder' => [
+            'valid-origin' => 'https://www.integration.signin.service.gov.uk'
+        ]
+    ]
 ];
