olcs-28304 update sample cache encryption config for local dev

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -127,8 +127,8 @@ return [
             'mode' => 'gcm',
         ],
         'secrets' => [
-            'node' => 'redis-ss',
-            'shared' => 'redis-shared',
+            'node' => 'ssweb-cache-encryption-key',
+            'shared' => 'shared-cache-encryption-key',
         ],
     ],
     'query_cache' => [
