olcs-28304 update sample cache encryption config for local dev

--- a/app/internal/config/autoload/local.php.dist
+++ b/app/internal/config/autoload/local.php.dist
@@ -109,8 +109,8 @@ return array(
             'mode' => 'gcm',
         ],
         'secrets' => [
-            'node' => 'nonprod/redis-iu',
-            'shared' => 'nonprod/redis-shared',
+            'node' => 'iuweb-cache-encryption-key',
+            'shared' => 'shared-cache-encryption-key',
         ],
     ],
     'query_cache' => [
