--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -191,4 +191,10 @@ return [
                 ],
         ],
     'html-purifier-cache-dir' => '/var/tmp/htmlPurifierCache',
+
+    'session-timeout-warning-modal-helper' => [
+        'enabled' => true,
+        'seconds-before-expiry-warning' => 300,  // 5 minutes
+        'timeout-redirect-url' => '/auth/timeout',
+    ],
 ];
