VOL-2261 remove composer nexus push

--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -41,7 +41,6 @@
         "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
-        "elendev/nexus-composer-push": "^0.1",
         "olcs/olcs-common": "~4.206.0",
         "laminas/laminas-dependency-plugin": "^2.0"
     },
@@ -74,8 +73,7 @@
         "cs": "phpcs --severity=1 --standard=vendor/olcs/coding-standards/Profiles/DVSA/CS/ruleset.xml",
         "coverage": "phpunit -c test/phpunit.xml --coverage-html ./test/coverage/html",
         "sonar": "phpunit -c test/phpunit.xml --coverage-clover ./test/coverage/coverage-report.clover --log-junit ./test/coverage/log.junit",
-        "update-syms": "composer-update-syms",
-        "release": "release"
+        "update-syms": "composer-update-syms"
     },
     "extra": {
         "nexus-push": {
