VOL-2261 remove composer nexus push

--- a/app/selfserve/composer.json
+++ b/app/selfserve/composer.json
@@ -39,7 +39,6 @@
         "olcs/olcs-utils": "~4.206.0",
         "olcs/olcs-auth": "~4.206.0",
         "olcs/olcs-logging": "~4.206.0",
-        "elendev/nexus-composer-push": "^0.1",
         "olcs/olcs-common": "~4.206.0",
         "laminas/laminas-dependency-plugin": "^2.0"
     },
@@ -70,8 +69,7 @@
         "cs": "vendor/bin/phpcs --severity=1 --standard=vendor/olcs/coding-standards/Profiles/DVSA/CS/ruleset.xml",
         "coverage": "vendor/bin/phpunit -c test/phpunit.xml --coverage-html ./test/coverage/html",
         "sonar": "vendor/bin/phpunit -c test/phpunit.xml --coverage-clover ./test/coverage/coverage-report.clover --log-junit ./test/coverage/log.junit",
-        "update-syms": "vendor/bin/composer-update-syms",
-        "release": "release"
+        "update-syms": "vendor/bin/composer-update-syms"
     },
     "extra": {
         "nexus-push": {
