VOL-2306: Create new JWT based Identity Provider

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -197,4 +197,9 @@ return [
         'seconds-before-expiry-warning' => 300,  // 5 minutes
         'timeout-redirect-url' => '/auth/timeout',
     ],
+
+    'auth' => [
+        'session_name' => 'Identity',
+        'identity_provider' => \Common\Rbac\JWTIdentityProvider::class
+    ],
 ];
