VOL-2306: Create new JWT based Identity Provider

--- a/app/internal/config/autoload/local.php.dist
+++ b/app/internal/config/autoload/local.php.dist
@@ -146,4 +146,9 @@ return array(
         ],
     ],
     'html-purifier-cache-dir' => '/var/tmp/htmlPurifierCache',
+
+    'auth' => [
+        'session_name' => 'Identity',
+        'identity_provider' => \Common\Rbac\JWTIdentityProvider::class
+    ],
 );
