VOL-2377 add analytics salt value

--- a/app/selfserve/config/autoload/local.php.dist
+++ b/app/selfserve/config/autoload/local.php.dist
@@ -198,6 +198,7 @@ return [
     ],
 
     'auth' => [
+        'user_unique_id_salt' => '1234',
         'realm' => 'selfserve',
         'session_name' => 'Identity',
         'identity_provider' => \Common\Rbac\JWTIdentityProvider::class
