--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -42,7 +42,8 @@
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
         "olcs/olcs-common": "~4.206.0",
-        "laminas/laminas-dependency-plugin": "^2.0"
+        "laminas/laminas-dependency-plugin": "^2.0",
+        "firebase/php-jwt": "^6.0"
     },
     "require-dev": {
         "olcs/olcs-devtools": "~4.206.0",
@@ -65,7 +66,8 @@
         "secure-http": false,
         "platform": {
             "php": "7.4.26"
-        }
+        },
+        "sort-packages": true
     },
     "scripts": {
         "ut": "phpunit -c test/phpunit.xml --stop-on-failure",
