--- a/app/internal/composer.json
+++ b/app/internal/composer.json
@@ -6,6 +6,10 @@
             "packagist": false
         },
         {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-common.git",
+            "type": "vcs"
+        },
+        {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
@@ -40,7 +44,7 @@
         "olcs/olcs-auth": "~4.206.0",
         "soflomo/purifier": "^1.0",
         "olcs/olcs-logging": "~4.206.0",
-        "olcs/olcs-common": "~4.206.0",
+        "olcs/olcs-common": "dev-VOL-3081-GDS-Upgrade",
         "laminas/laminas-dependency-plugin": "^2.0",
         "firebase/php-jwt": "^6.0"
     },
